--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 #sectiune-principala{
     background:url("img1.jpg");
+    background-size: cover;
     height: 80vh;
     display:flex;
     flex-direction:column;
